Feat: setup-env.sh
- Created a single shell script to quickly create all .env files for projects. Gitignored.

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,9 @@ typings/
 # dotenv environment variables file
 .env
 
+# Environment setup script (contains sensitive info)
+setup-env.sh
+
 # IDE
 .idea/*
 *.iml
